# password-checekr

./: .gitignore  CMakeLists.txt  README.md  main.c
headers/: trie.h
